<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
    <item
        android:id="@+id/menu_my_trips"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/my_trips" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_trips" />
    <item
        android:id="@+id/menu_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/chat_list" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />
</menu>
